PL2/gramaticas/ikea/muebles_gramatica/.antlr/mueble_gramaticaParser.java
// Generated from c:/antlr/muebles_gramatica/mueble_gramatica.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class mueble_gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MUEBLE=1, HERRAMIENTA=2, HERRAJE=3, PIEZA=4, CANTIDAD=5, PASO=6, USAR=7, 
		UNIR=8, FIJAR=9, INSERTAR=10, REPETIR=11, DESHACER=12, COMPROBAR=13, ATORNILLAR=14, 
		MARTILLAR=15, COLGAR=16, MARCAR=17, PEGAR=18, COLOCAR=19, NIVELAR=20, 
		FIN=21, CON=22, EN=23, A=24, Y=25, USANDO=26, PARED=27, NUM=28, CADENA=29, 
		ID=30, COMA=31, PUNTOYCOMA=32, DOS_PUNTOS=33, ESPACIO=34;
	public static final int
		RULE_programa = 0, RULE_definicionMueble = 1, RULE_seccionDefiniciones = 2, 
		RULE_definicionHerraje = 3, RULE_usoHerramienta = 4, RULE_definicionPieza = 5, 
		RULE_nombre = 6, RULE_instruccion = 7, RULE_pasoMontaje = 8, RULE_accionLista = 9, 
		RULE_accion = 10, RULE_piezaRef = 11, RULE_herrajeRef = 12, RULE_herrajeItem = 13, 
		RULE_herrajeLista = 14, RULE_herramientaRef = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "definicionMueble", "seccionDefiniciones", "definicionHerraje", 
			"usoHerramienta", "definicionPieza", "nombre", "instruccion", "pasoMontaje", 
			"accionLista", "accion", "piezaRef", "herrajeRef", "herrajeItem", "herrajeLista", 
			"herramientaRef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'mueble'", "'herramienta'", "'herraje'", "'pieza'", "'cantidad'", 
			"'paso'", "'usar'", "'unir'", "'fijar'", "'insertar'", "'repetir'", "'deshacer'", 
			"'comprobar'", "'atornillar'", "'martillar'", "'colgar'", "'marcar'", 
			"'pegar'", "'colocar'", "'nivelar'", "'fin'", "'con'", "'en'", "'a'", 
			"'y'", "'usando'", "'pared'", null, null, null, "','", "';'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MUEBLE", "HERRAMIENTA", "HERRAJE", "PIEZA", "CANTIDAD", "PASO", 
			"USAR", "UNIR", "FIJAR", "INSERTAR", "REPETIR", "DESHACER", "COMPROBAR", 
			"ATORNILLAR", "MARTILLAR", "COLGAR", "MARCAR", "PEGAR", "COLOCAR", "NIVELAR", 
			"FIN", "CON", "EN", "A", "Y", "USANDO", "PARED", "NUM", "CADENA", "ID", 
			"COMA", "PUNTOYCOMA", "DOS_PUNTOS", "ESPACIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mueble_gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mueble_gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DefinicionMuebleContext definicionMueble() {
			return getRuleContext(DefinicionMuebleContext.class,0);
		}
		public SeccionDefinicionesContext seccionDefiniciones() {
			return getRuleContext(SeccionDefinicionesContext.class,0);
		}
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public TerminalNode FIN() { return getToken(mueble_gramaticaParser.FIN, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(mueble_gramaticaParser.PUNTOYCOMA, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			definicionMueble();
			setState(33);
			seccionDefiniciones();
			setState(34);
			instruccion();
			setState(35);
			match(FIN);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUNTOYCOMA) {
				{
				setState(36);
				match(PUNTOYCOMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionMuebleContext extends ParserRuleContext {
		public TerminalNode MUEBLE() { return getToken(mueble_gramaticaParser.MUEBLE, 0); }
		public TerminalNode CADENA() { return getToken(mueble_gramaticaParser.CADENA, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(mueble_gramaticaParser.PUNTOYCOMA, 0); }
		public DefinicionMuebleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionMueble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterDefinicionMueble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitDefinicionMueble(this);
		}
	}

	public final DefinicionMuebleContext definicionMueble() throws RecognitionException {
		DefinicionMuebleContext _localctx = new DefinicionMuebleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicionMueble);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(MUEBLE);
			setState(40);
			match(CADENA);
			setState(41);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionDefinicionesContext extends ParserRuleContext {
		public List<UsoHerramientaContext> usoHerramienta() {
			return getRuleContexts(UsoHerramientaContext.class);
		}
		public UsoHerramientaContext usoHerramienta(int i) {
			return getRuleContext(UsoHerramientaContext.class,i);
		}
		public List<DefinicionPiezaContext> definicionPieza() {
			return getRuleContexts(DefinicionPiezaContext.class);
		}
		public DefinicionPiezaContext definicionPieza(int i) {
			return getRuleContext(DefinicionPiezaContext.class,i);
		}
		public List<DefinicionHerrajeContext> definicionHerraje() {
			return getRuleContexts(DefinicionHerrajeContext.class);
		}
		public DefinicionHerrajeContext definicionHerraje(int i) {
			return getRuleContext(DefinicionHerrajeContext.class,i);
		}
		public SeccionDefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionDefiniciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterSeccionDefiniciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitSeccionDefiniciones(this);
		}
	}

	public final SeccionDefinicionesContext seccionDefiniciones() throws RecognitionException {
		SeccionDefinicionesContext _localctx = new SeccionDefinicionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seccionDefiniciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 152L) != 0)) {
				{
				setState(46);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case USAR:
					{
					setState(43);
					usoHerramienta();
					}
					break;
				case PIEZA:
					{
					setState(44);
					definicionPieza();
					}
					break;
				case HERRAJE:
					{
					setState(45);
					definicionHerraje();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionHerrajeContext extends ParserRuleContext {
		public TerminalNode HERRAJE() { return getToken(mueble_gramaticaParser.HERRAJE, 0); }
		public TerminalNode CADENA() { return getToken(mueble_gramaticaParser.CADENA, 0); }
		public TerminalNode CANTIDAD() { return getToken(mueble_gramaticaParser.CANTIDAD, 0); }
		public TerminalNode NUM() { return getToken(mueble_gramaticaParser.NUM, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(mueble_gramaticaParser.PUNTOYCOMA, 0); }
		public DefinicionHerrajeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionHerraje; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterDefinicionHerraje(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitDefinicionHerraje(this);
		}
	}

	public final DefinicionHerrajeContext definicionHerraje() throws RecognitionException {
		DefinicionHerrajeContext _localctx = new DefinicionHerrajeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicionHerraje);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(HERRAJE);
			setState(52);
			match(CADENA);
			setState(53);
			match(CANTIDAD);
			setState(54);
			match(NUM);
			setState(55);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsoHerramientaContext extends ParserRuleContext {
		public TerminalNode USAR() { return getToken(mueble_gramaticaParser.USAR, 0); }
		public TerminalNode HERRAMIENTA() { return getToken(mueble_gramaticaParser.HERRAMIENTA, 0); }
		public TerminalNode CADENA() { return getToken(mueble_gramaticaParser.CADENA, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(mueble_gramaticaParser.PUNTOYCOMA, 0); }
		public UsoHerramientaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usoHerramienta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterUsoHerramienta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitUsoHerramienta(this);
		}
	}

	public final UsoHerramientaContext usoHerramienta() throws RecognitionException {
		UsoHerramientaContext _localctx = new UsoHerramientaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_usoHerramienta);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(USAR);
			setState(58);
			match(HERRAMIENTA);
			setState(59);
			match(CADENA);
			setState(60);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionPiezaContext extends ParserRuleContext {
		public TerminalNode PIEZA() { return getToken(mueble_gramaticaParser.PIEZA, 0); }
		public TerminalNode CADENA() { return getToken(mueble_gramaticaParser.CADENA, 0); }
		public TerminalNode CANTIDAD() { return getToken(mueble_gramaticaParser.CANTIDAD, 0); }
		public TerminalNode NUM() { return getToken(mueble_gramaticaParser.NUM, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(mueble_gramaticaParser.PUNTOYCOMA, 0); }
		public DefinicionPiezaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionPieza; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterDefinicionPieza(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitDefinicionPieza(this);
		}
	}

	public final DefinicionPiezaContext definicionPieza() throws RecognitionException {
		DefinicionPiezaContext _localctx = new DefinicionPiezaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definicionPieza);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(PIEZA);
			setState(63);
			match(CADENA);
			setState(64);
			match(CANTIDAD);
			setState(65);
			match(NUM);
			setState(66);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NombreContext extends ParserRuleContext {
		public TerminalNode CADENA() { return getToken(mueble_gramaticaParser.CADENA, 0); }
		public TerminalNode ID() { return getToken(mueble_gramaticaParser.ID, 0); }
		public NombreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterNombre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitNombre(this);
		}
	}

	public final NombreContext nombre() throws RecognitionException {
		NombreContext _localctx = new NombreContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nombre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !(_la==CADENA || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public List<PasoMontajeContext> pasoMontaje() {
			return getRuleContexts(PasoMontajeContext.class);
		}
		public PasoMontajeContext pasoMontaje(int i) {
			return getRuleContext(PasoMontajeContext.class,i);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitInstruccion(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instruccion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				pasoMontaje();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PASO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PasoMontajeContext extends ParserRuleContext {
		public TerminalNode PASO() { return getToken(mueble_gramaticaParser.PASO, 0); }
		public List<TerminalNode> NUM() { return getTokens(mueble_gramaticaParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(mueble_gramaticaParser.NUM, i);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(mueble_gramaticaParser.DOS_PUNTOS, 0); }
		public AccionListaContext accionLista() {
			return getRuleContext(AccionListaContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(mueble_gramaticaParser.PUNTOYCOMA, 0); }
		public TerminalNode REPETIR() { return getToken(mueble_gramaticaParser.REPETIR, 0); }
		public PasoMontajeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pasoMontaje; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterPasoMontaje(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitPasoMontaje(this);
		}
	}

	public final PasoMontajeContext pasoMontaje() throws RecognitionException {
		PasoMontajeContext _localctx = new PasoMontajeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pasoMontaje);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(PASO);
			setState(76);
			match(NUM);
			setState(77);
			match(DOS_PUNTOS);
			setState(78);
			accionLista();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REPETIR) {
				{
				setState(79);
				match(REPETIR);
				setState(80);
				match(NUM);
				}
			}

			setState(83);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccionListaContext extends ParserRuleContext {
		public List<AccionContext> accion() {
			return getRuleContexts(AccionContext.class);
		}
		public AccionContext accion(int i) {
			return getRuleContext(AccionContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(mueble_gramaticaParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(mueble_gramaticaParser.COMA, i);
		}
		public TerminalNode Y() { return getToken(mueble_gramaticaParser.Y, 0); }
		public AccionListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accionLista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterAccionLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitAccionLista(this);
		}
	}

	public final AccionListaContext accionLista() throws RecognitionException {
		AccionListaContext _localctx = new AccionListaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_accionLista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			accion();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(86);
				match(COMA);
				setState(87);
				accion();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Y) {
				{
				setState(93);
				match(Y);
				setState(94);
				accion();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccionContext extends ParserRuleContext {
		public TerminalNode UNIR() { return getToken(mueble_gramaticaParser.UNIR, 0); }
		public TerminalNode FIJAR() { return getToken(mueble_gramaticaParser.FIJAR, 0); }
		public List<PiezaRefContext> piezaRef() {
			return getRuleContexts(PiezaRefContext.class);
		}
		public PiezaRefContext piezaRef(int i) {
			return getRuleContext(PiezaRefContext.class,i);
		}
		public List<HerrajeItemContext> herrajeItem() {
			return getRuleContexts(HerrajeItemContext.class);
		}
		public HerrajeItemContext herrajeItem(int i) {
			return getRuleContext(HerrajeItemContext.class,i);
		}
		public TerminalNode USANDO() { return getToken(mueble_gramaticaParser.USANDO, 0); }
		public HerrajeListaContext herrajeLista() {
			return getRuleContext(HerrajeListaContext.class,0);
		}
		public TerminalNode CON() { return getToken(mueble_gramaticaParser.CON, 0); }
		public TerminalNode A() { return getToken(mueble_gramaticaParser.A, 0); }
		public TerminalNode EN() { return getToken(mueble_gramaticaParser.EN, 0); }
		public TerminalNode CANTIDAD() { return getToken(mueble_gramaticaParser.CANTIDAD, 0); }
		public List<TerminalNode> NUM() { return getTokens(mueble_gramaticaParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(mueble_gramaticaParser.NUM, i);
		}
		public TerminalNode ATORNILLAR() { return getToken(mueble_gramaticaParser.ATORNILLAR, 0); }
		public TerminalNode MUEBLE() { return getToken(mueble_gramaticaParser.MUEBLE, 0); }
		public TerminalNode PARED() { return getToken(mueble_gramaticaParser.PARED, 0); }
		public TerminalNode COLGAR() { return getToken(mueble_gramaticaParser.COLGAR, 0); }
		public TerminalNode MARTILLAR() { return getToken(mueble_gramaticaParser.MARTILLAR, 0); }
		public TerminalNode INSERTAR() { return getToken(mueble_gramaticaParser.INSERTAR, 0); }
		public TerminalNode PEGAR() { return getToken(mueble_gramaticaParser.PEGAR, 0); }
		public TerminalNode COLOCAR() { return getToken(mueble_gramaticaParser.COLOCAR, 0); }
		public TerminalNode MARCAR() { return getToken(mueble_gramaticaParser.MARCAR, 0); }
		public HerramientaRefContext herramientaRef() {
			return getRuleContext(HerramientaRefContext.class,0);
		}
		public TerminalNode NIVELAR() { return getToken(mueble_gramaticaParser.NIVELAR, 0); }
		public TerminalNode REPETIR() { return getToken(mueble_gramaticaParser.REPETIR, 0); }
		public TerminalNode PASO() { return getToken(mueble_gramaticaParser.PASO, 0); }
		public TerminalNode DESHACER() { return getToken(mueble_gramaticaParser.DESHACER, 0); }
		public AccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).enterAccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mueble_gramaticaListener ) ((mueble_gramaticaListener)listener).exitAccion(this);
		}
	}

	public final AccionContext accion() throws RecognitionException {
		AccionContext _localctx = new AccionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_accion);
		int _la;
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				_la = _input.LA(1);
				if ( !(_la==UNIR || _la==FIJAR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(100);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(98);
					piezaRef();
					}
					break;
				case 2:
					{
					setState(99);
					herrajeItem();
					}
					break;
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 29360128L) != 0)) {
					{
					setState(102);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 29360128L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(103);
					piezaRef();
					}
				}

				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==USANDO) {
					{
					setState(106);
					match(USANDO);
					setState(107);
					herrajeLista();
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==CANTIDAD) {
						{
						setState(108);
						match(CANTIDAD);
						setState(109);
						match(NUM);
						}
					}

					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(ATORNILLAR);
				setState(115);
				match(MUEBLE);
				setState(116);
				match(EN);
				setState(117);
				match(PARED);
				setState(118);
				match(USANDO);
				setState(119);
				herrajeLista();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				match(COLGAR);
				setState(121);
				piezaRef();
				setState(122);
				match(EN);
				setState(123);
				match(PARED);
				setState(124);
				match(USANDO);
				setState(125);
				herrajeLista();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CANTIDAD) {
					{
					setState(126);
					match(CANTIDAD);
					setState(127);
					match(NUM);
					}
				}
